--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
   <!--meta data-->
-  <title>Ultimate Verona - Discover</title>
+  <title>Ultimate Frisbee Verona - Discover</title>
   <meta name="description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women.">
-  <meta name="keywords" content="Ultimate, Frisbee, Verona, Discover, sport, disco, allenamento, prova gratis" />
+  <meta name="keywords" content="Ultimate, Frisbee, Verona, Discover, sport, disco, allenamento, prova gratis, open day" />
   <meta name="theme-color" content="#ffffff">
 
   <meta property="og:type" content="website" />
@@ -120,21 +120,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           <ul class="rslides" id="slider3">
             <li>
               <div class="banner-text">
-                <span class="subtitle">CUS Verona Ultimate</span>
+                <span class="subtitle">CUS Verona Ultimate Frisbee</span>
                 <h1><span style="color:var(--blue);">D</span>iscover</h1>
                 <p>Who gets more air than a basketball player, more floor than a rugby player and pulls at every tournament?<br>That’s an <b>Ultimate Player</b></p>
               </div>
             </li>
             <li>
               <div class="banner-text">
-                <span class="subtitle">CUS Verona Ultimate</span>
+                <span class="subtitle">CUS Verona Ultimate Frisbee</span>
                 <h1><span style="color:var(--blue);">D</span>iscover</h1>
                 <p>"..L'Ultimate combina velocità, grazia e potenti scatti con un ritmo estenuante."<br><small>The Wall Street Journal</small></p>
               </div>
             </li>
             <li>
               <div class="banner-text">
-                <span class="subtitle">CUS Verona Ultimate</span>
+                <span class="subtitle">CUS Verona Ultimate Frisbee</span>
                 <h1><span style="color:var(--blue);">D</span>iscover</h1>
                 <p>Lo sport dà il meglio di sé quando ci unisce.</p>
               </div>
@@ -237,8 +237,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="col-sm-12 col-md-6 services-right-agileits">
               <h4>Che cos'è l' Ultimate</h4>
               <p class="para-agileits-w3layouts">
-                L'Ultimate è uno sport che seduce rapidamente per la sua semplicitá, l'immediatezza 
-                e la spettacolaritá di gioco. Per praticarlo è sufficiente un disco da 175 grammi, due squadre 
+                L'Ultimate (noto anche come Ultimate Frisbee) è uno sport che seduce rapidamente per la sua semplicitá, l'immediatezza 
+                e la spettacolaritá di gioco. Per praticarlo è sufficiente un <abbr title="Frisbee">disco</abbr> da 175 grammi, due squadre 
                 e un campo. L'Ultimate è uno sport di squadra completo, dai tratti agonistici e tecnici 
                 simili ad altri sport, che non prevede il contatto fisico e dai risvolti educativi eccezionali.
               </p>
@@ -307,12 +307,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       <div class="row justify-content-center">
         <div class="col-sm-6 col-md-6 col-lg-4">
           <div class="latest-item large-item m-auto">
-            <img src="images/volantino-2022-fronte.webp" class="img-fluid mh-100" alt="volantino-2022-fronte">
+            <img src="images/volantino-2022-fronte.webp" class="img-fluid mh-100" alt="volantino open day 2022 fronte">
           </div>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-4">
           <div class="latest-item large-item m-auto">
-            <img src="images/volantino-2022-retro.webp" class="img-fluid mh-100" alt="volantino-2022-retro">
+            <img src="images/volantino-2022-retro.webp" class="img-fluid mh-100" alt="volantino open day 2022 retro">
           </div>
         </div>
       </div>
@@ -398,7 +398,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <div class="footer">
     <div class="container">
       <div class="agileinfo_copyright">
-        <p>© <span id="year">2022</span> Discover Ultimate Verona</p>
+        <p>© <span id="year">2022</span> Discover Ultimate CUS Verona</p>
       </div>
       <div class="agileinfo_copyright p-0">
         <p>© 2017 Plunge. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank" rel="noopener noreferrer nofollow" class="umami--click--open-W3layouts">W3layouts</a></p>
