--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ultimateverona.it" />
-  <meta property="og:title" content="Ultimate Verona - Discover" />
+  <meta property="og:title" content="Ultimate Frisbee Verona - Discover" />
   <meta property="og:description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women."/>
   <meta property="og:site_name" content="Ultimate Verona" />
   <meta property="og:locale" content="it_IT" />
@@ -36,7 +36,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <link href="css/bootstrap.slim.min.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/style.min.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/popuo-box.min.css" rel="stylesheet" type="text/css" media="all" />
-  <link href="css/easy-responsive-tabs.min.css" rel="stylesheet" type="text/css"  media="all" />
+  <link href="css/easy-responsive-tabs.min.css" rel="stylesheet" type="text/css" media="all" />
   <!--//css links-->
 
   <!--fonts-->
