--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <meta property="og:url" content="https://ultimateverona.it" />
   <meta property="og:title" content="Ultimate Frisbee Verona - Discover" />
   <meta property="og:description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women."/>
-  <meta property="og:site_name" content="Ultimate Verona" />
+  <meta property="og:site_name" content="Ultimate Frisbee Verona" />
   <meta property="og:locale" content="it_IT" />
   <meta property="og:image" content="https://ultimateverona.it/images/logo_landscape.webp" />
   <meta property="og:image:secure_url" content="https://ultimateverona.it/images/logo_landscape.webp" />
@@ -296,7 +296,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <!-- //about -->
 
   <!-- Events -->
-  <section class="events pt-0">
+  <section id="events" class="events pt-0">
     <div class="container">
       <h2 class="heading-agileinfo">
         Events
@@ -305,18 +305,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </svg>
       </h2>
       <div class="row justify-content-center">
-        <div class="col-sm-6 col-md-6 col-lg-4">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-4">
           <div class="latest-item large-item m-auto">
-            <img src="images/volantino-2022-fronte.webp" class="img-fluid mh-100" alt="volantino open day 2022 fronte">
+            <a
+              href="images/volantino-2022-fronte.webp"
+              class="umami--click--open-img-volantino-fronte"
+              target="_blank"
+            ><img src="images/volantino-2022-fronte.webp" class="img-fluid mh-100" alt="volantino open day 2022 fronte">
+            </a>
           </div>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-4">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-4">
           <div class="latest-item large-item m-auto">
-            <img src="images/volantino-2022-retro.webp" class="img-fluid mh-100" alt="volantino open day 2022 retro">
+            <a
+              href="images/volantino-2022-retro.webp"
+              class="umami--click--open-img-volantino-retro"
+              target="_blank"
+            ><img src="images/volantino-2022-retro.webp" class="img-fluid mh-100" alt="volantino open day 2022 retro">
+            </a>
           </div>
         </div>
       </div>
-      <div id="countdown" class="row justify-content-center mt-5 hidden">
+      <div id="countdown-open-day" class="row justify-content-center mt-4 hidden">
         <div class="col-sm-12 col-md-8 col-lg-6">
           <ul class="countdown">
             <li><span data-countdown-text="days">0</span>Giorni</li>
@@ -326,7 +336,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           </ul>
         </div>
       </div>
-      <div class="row justify-content-center mt-5">
+      <div class="row justify-content-center mt-4">
         <div class="col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
           <div class="share-btn">
             <span class="text">Share</span>
@@ -335,17 +345,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </span>
             <div class="sm-btns">
               <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fultimateverona.it"
-                class="umami--click--share-facebook"
+                class="umami--click--share-open-day-facebook"
                 title="Condividi su Facebook" target="_blank" rel="noopener"
               ><i class="fab fa-facebook"></i>
               </a>
               <a href="https://twitter.com/intent/tweet?text=Open%20Day%20il%2026%20settembre%20e%206%20ottobre%20dalle%2019:30%20alle%2021:30%20in%20Via%20Montorio%20112.%20Andiamo?&url=https%3A%2F%2Fultimateverona.it&hashtags=ultimate,verona,frisbee,sport"
-                class="umami--click--share-twitter"
+                class="umami--click--share-open-day-twitter"
                 title="Condividi su Twitter" target="_blank" rel="noopener"
               ><i class="fab fa-twitter"></i>
               </a>
               <a href="https://api.whatsapp.com/send?text=https://ultimateverona.it%0AOpen%20Day%20il%2026%20settembre%20e%206%20ottobre%20dalle%2019:30%20alle%2021:30%20in%20Via%20Montorio%20112.%20Andiamo?"
-                class="umami--click--share-whatsapp"
+                class="umami--click--share-open-day-whatsapp"
                 title="Condividi su Whatsapp" target="_blank" rel="noopener"
               ><i class="fa-brands fa-whatsapp"></i>
               </a>
@@ -353,6 +363,108 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           </div>
         </div>
       </div>
+
+      <hr class="fancy" />
+
+      <div class="row justify-content-center">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="latest-item large-item m-auto">
+            <a
+              href="https://www.facebook.com/events/1155755028708481"
+              class="umami--click--open-facebook-hat"
+              target="_blank"
+            ><img src="images/locandina-hat-2022.webp" class="img-fluid mh-100" alt="locandina hat 2022">
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div id="event-hat" class="long-text text-justify py-3 px-1">
+            <h3>Torneo Hat Tentation</h3>
+
+            <h5 class="mt-2">DOVE?</h5>
+            <p>A Verona, <a href="https://goo.gl/maps/oqjCLokctpM6hR2z6" target="_blank">Via della Diga, 6</a></p>
+
+            <h5 class="mt-2">QUANDO?</h5>
+            <p>Domenica 16 Ottobre 2022</p>
+            <p>Accoglienza ore 9:00 - Prima partita ore 9:30</p>
+
+            <h5 class="mt-2">PERCHE'?</h5>
+            <p>
+              Perchè abbiamo il dovere di invitarvi al nostro weekend di festa specialissimo!
+              La sera prima ci sarà una <a href="https://www.facebook.com/events/490100475976358" target="_blank">mega festa<span class="text-super"><i class="fa-solid fa-up-right-from-square"></i></span></a> per il nostro 10° compleanno!
+              <span class="text-info">#CiGaPauraStaACasa</span>
+            </p>
+            <!-- <p>Clicca partecipa al seguente link, dove troverai tutte le informazioni! <a href="https://forms.gle/WKVVYUp7dusRsBpj8" target="_blank">https://forms.gle/WKVVYUp7dusRsBpj8</a></p> -->
+
+            <h5 class="mt-2">COME?</h5>
+            <p>Torneo formato Hat con <b>OBBLIGO di cappello</b> 👒 durante il gioco (es. prendo il disco senza cappello = turnover)</p>
+
+            <div class="dots">...</div>
+            <div class="more-text">
+              <h5 class="mt-2">QUANTO?</h5>
+              <p>
+                20€ per pranzo &rarr; pasta + frutta (anche opzioni vegetariane) e <b>divertimento incluso</b>!<br/>
+                <span class="text-muted">Verranno accettati i primi 100 iscritti</span> 😉
+              </p>
+
+              <hr class="my-3"/>
+
+              <p>Stay Tuned and Wear a HAT! 🎩</p>
+              <p class="mt-1"><b>P.S.</b> Per coloro che verranno alla festa la sera prima, possibilità di dormire in tenda presso i campi sportivi<br/>(Vestitevi pesantemente pesanti! <span class="text-info">#winteriscoming</span>)</p>
+            </div>
+            <div
+              class="btn-show mt-3 umami--click--show-more-text-hat"
+              data-target="#event-hat"
+            >Mostra tutto</div>
+
+            <div class="d-flex justify-content-center mt-3">
+              <a
+                href="https://forms.gle/WKVVYUp7dusRsBpj8"
+                class="btn btn-primary w-100 umami--click--open-form-hat"
+                target="_blank"
+              >PARTECIPA</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="countdown-hat" class="row justify-content-center mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6">
+          <ul class="countdown">
+            <li><span data-countdown-text="days">0</span>Giorni</li>
+            <li><span data-countdown-text="hours">0</span>Ore</li>
+            <li><span data-countdown-text="minutes">0</span>Minuti</li>
+            <li><span data-countdown-text="seconds">0</span>Secondi</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-4">
+        <div class="col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
+          <div class="share-btn">
+            <span class="text">Share</span>
+            <span class="icon">
+              <i class="fa-solid fa-share"></i>
+            </span>
+            <div class="sm-btns">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fultimateverona.it"
+                class="umami--click--share-hat-facebook"
+                title="Condividi su Facebook" target="_blank" rel="noopener"
+              ><i class="fab fa-facebook"></i>
+              </a>
+              <a href="https://twitter.com/intent/tweet?text=Torneo%20HAT-tention%20di%20Ultimate%20Frisbee%20il%2016%20ottobre%20a%20Parona%20in%20Via%20della%20Diga%206.%20Andiamo?&url=https%3A%2F%2Fultimateverona.it&hashtags=ultimate,verona,frisbee,torneo,hat,festa"
+                class="umami--click--share-hat-twitter"
+                title="Condividi su Twitter" target="_blank" rel="noopener"
+              ><i class="fab fa-twitter"></i>
+              </a>
+              <a href="https://api.whatsapp.com/send?text=https://ultimateverona.it%0ATorneo%20HAT-tention%20di%20Ultimate%20Frisbee%20il%2016%20ottobre%20a%20Parona%20in%20Via%20della%20Diga%206.%20Andiamo?"
+                class="umami--click--share-hat-whatsapp"
+                title="Condividi su Whatsapp" target="_blank" rel="noopener"
+              ><i class="fa-brands fa-whatsapp"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
   <!-- //events -->
