--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="it" prefix="og:https://ogp.me/ns#">
 <head>
@@ -305,68 +299,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </svg>
       </h2>
       <div class="row justify-content-center">
-        <div class="col-6 col-sm-6 col-md-6 col-lg-4">
-          <div class="latest-item large-item m-auto">
-            <a
-              href="images/volantino-2022-fronte.webp"
-              class="umami--click--open-img-volantino-fronte"
-              target="_blank"
-            ><img src="images/volantino-2022-fronte.webp" class="img-fluid mh-100" alt="volantino open day 2022 fronte">
-            </a>
-          </div>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-4">
-          <div class="latest-item large-item m-auto">
-            <a
-              href="images/volantino-2022-retro.webp"
-              class="umami--click--open-img-volantino-retro"
-              target="_blank"
-            ><img src="images/volantino-2022-retro.webp" class="img-fluid mh-100" alt="volantino open day 2022 retro">
-            </a>
-          </div>
-        </div>
-      </div>
-      <div id="countdown-open-day" class="row justify-content-center mt-4 hidden">
-        <div class="col-sm-12 col-md-8 col-lg-6">
-          <ul class="countdown">
-            <li><span data-countdown-text="days">0</span>Giorni</li>
-            <li><span data-countdown-text="hours">0</span>Ore</li>
-            <li><span data-countdown-text="minutes">0</span>Minuti</li>
-            <li><span data-countdown-text="seconds">0</span>Secondi</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row justify-content-center mt-4">
-        <div class="col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
-          <div class="share-btn">
-            <span class="text">Share</span>
-            <span class="icon">
-              <i class="fa-solid fa-share"></i>
-            </span>
-            <div class="sm-btns">
-              <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fultimateverona.it"
-                class="umami--click--share-open-day-facebook"
-                title="Condividi su Facebook" target="_blank" rel="noopener"
-              ><i class="fab fa-facebook"></i>
-              </a>
-              <a href="https://twitter.com/intent/tweet?text=Open%20Day%20il%2026%20settembre%20e%206%20ottobre%20dalle%2019:30%20alle%2021:30%20in%20Via%20Montorio%20112.%20Andiamo?&url=https%3A%2F%2Fultimateverona.it&hashtags=ultimate,verona,frisbee,sport"
-                class="umami--click--share-open-day-twitter"
-                title="Condividi su Twitter" target="_blank" rel="noopener"
-              ><i class="fab fa-twitter"></i>
-              </a>
-              <a href="https://api.whatsapp.com/send?text=https://ultimateverona.it%0AOpen%20Day%20il%2026%20settembre%20e%206%20ottobre%20dalle%2019:30%20alle%2021:30%20in%20Via%20Montorio%20112.%20Andiamo?"
-                class="umami--click--share-open-day-whatsapp"
-                title="Condividi su Whatsapp" target="_blank" rel="noopener"
-              ><i class="fa-brands fa-whatsapp"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <hr class="fancy" />
-
-      <div class="row justify-content-center">
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="latest-item large-item m-auto">
             <a
@@ -422,7 +354,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 href="https://forms.gle/WKVVYUp7dusRsBpj8"
                 class="btn btn-primary w-100 umami--click--open-form-hat"
                 target="_blank"
-              >PARTECIPA</a>
+              >PARTECIPA <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a>
             </div>
           </div>
         </div>
