--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="it" prefix="og:https://ogp.me/ns#">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
   <!--meta data-->
   <title>Ultimate Frisbee Verona - Discover</title>
-  <meta name="description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women.">
+  <meta name="description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women." />
   <meta name="keywords" content="Ultimate, Frisbee, Verona, Discover, sport, disco, allenamento, prova gratis, open day" />
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#4272e1" />
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ultimateverona.it" />
   <meta property="og:title" content="Ultimate Frisbee Verona - Discover" />
-  <meta property="og:description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women."/>
+  <meta property="og:description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women." />
   <meta property="og:site_name" content="Ultimate Frisbee Verona" />
   <meta property="og:locale" content="it_IT" />
   <meta property="og:image" content="https://ultimateverona.it/images/logo_landscape.webp" />
@@ -34,17 +35,17 @@
   <!--//css links-->
 
   <!--fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--//fonts-->
 
   <!--favicon-->
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-  <link rel="icon" type="image/x-icon" sizes="48x48" href="/favicon.ico">
-  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#3264d8">
-  <link rel="manifest" href="/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+  <link rel="icon" type="image/x-icon" sizes="48x48" href="/favicon.ico" />
+  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#3264d8" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
   <!--//favicon-->
 
   <!--schema-->
@@ -290,7 +291,7 @@
   <!-- //about -->
 
   <!-- Events -->
-  <section id="events" class="events pt-0">
+  <section id="events" class="events pt-0 d-none">
     <div class="container">
       <h2 class="heading-agileinfo">
         Events
@@ -298,105 +299,6 @@
           <path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/>
         </svg>
       </h2>
-      <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="latest-item large-item m-auto">
-            <a
-              href="https://www.facebook.com/events/1155755028708481"
-              class="umami--click--open-facebook-hat"
-              target="_blank"
-            ><img src="images/locandina-hat-2022.webp" class="img-fluid mh-100" alt="locandina hat 2022">
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-6">
-          <div id="event-hat" class="long-text text-justify py-3 px-1">
-            <h3>Torneo Hat Tentation</h3>
-
-            <h5 class="mt-2">DOVE?</h5>
-            <p>A Verona, <a href="https://goo.gl/maps/oqjCLokctpM6hR2z6" target="_blank">Via della Diga, 6</a></p>
-
-            <h5 class="mt-2">QUANDO?</h5>
-            <p>Domenica 16 Ottobre 2022</p>
-            <p>Accoglienza ore 9:00 - Prima partita ore 9:30</p>
-
-            <h5 class="mt-2">PERCHE'?</h5>
-            <p>
-              Perchè abbiamo il dovere di invitarvi al nostro weekend di festa specialissimo!
-              La sera prima ci sarà una <a href="https://www.facebook.com/events/490100475976358" target="_blank">mega festa<span class="text-super"><i class="fa-solid fa-up-right-from-square"></i></span></a> per il nostro 10° compleanno!
-              <span class="text-info">#CiGaPauraStaACasa</span>
-            </p>
-            <!-- <p>Clicca partecipa al seguente link, dove troverai tutte le informazioni! <a href="https://forms.gle/WKVVYUp7dusRsBpj8" target="_blank">https://forms.gle/WKVVYUp7dusRsBpj8</a></p> -->
-
-            <h5 class="mt-2">COME?</h5>
-            <p>Torneo formato Hat con <b>OBBLIGO di cappello</b> 👒 durante il gioco (es. prendo il disco senza cappello = turnover)</p>
-
-            <div class="dots">...</div>
-            <div class="more-text">
-              <h5 class="mt-2">QUANTO?</h5>
-              <p>
-                20€ per pranzo &rarr; pasta + frutta (anche opzioni vegetariane) e <b>divertimento incluso</b>!<br/>
-                <span class="text-muted">Verranno accettati i primi 100 iscritti</span> 😉
-              </p>
-
-              <hr class="my-3"/>
-
-              <p>Stay Tuned and Wear a HAT! 🎩</p>
-              <p class="mt-1"><b>P.S.</b> Per coloro che verranno alla festa la sera prima, possibilità di dormire in tenda presso i campi sportivi<br/>(Vestitevi pesantemente pesanti! <span class="text-info">#winteriscoming</span>)</p>
-            </div>
-            <div
-              class="btn-show mt-3 umami--click--show-more-text-hat"
-              data-target="#event-hat"
-            >Mostra tutto</div>
-
-            <div class="d-flex justify-content-center mt-3">
-              <a
-                href="https://forms.gle/WKVVYUp7dusRsBpj8"
-                class="btn btn-primary w-100 umami--click--open-form-hat"
-                target="_blank"
-              >PARTECIPA <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="countdown-hat" class="row justify-content-center mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6">
-          <ul class="countdown">
-            <li><span data-countdown-text="days">0</span>Giorni</li>
-            <li><span data-countdown-text="hours">0</span>Ore</li>
-            <li><span data-countdown-text="minutes">0</span>Minuti</li>
-            <li><span data-countdown-text="seconds">0</span>Secondi</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row justify-content-center mt-4">
-        <div class="col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
-          <div class="share-btn">
-            <span class="text">Share</span>
-            <span class="icon">
-              <i class="fa-solid fa-share"></i>
-            </span>
-            <div class="sm-btns">
-              <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fultimateverona.it"
-                class="umami--click--share-hat-facebook"
-                title="Condividi su Facebook" target="_blank" rel="noopener"
-              ><i class="fab fa-facebook"></i>
-              </a>
-              <a href="https://twitter.com/intent/tweet?text=Torneo%20HAT-tention%20di%20Ultimate%20Frisbee%20il%2016%20ottobre%20a%20Parona%20in%20Via%20della%20Diga%206.%20Andiamo?&url=https%3A%2F%2Fultimateverona.it&hashtags=ultimate,verona,frisbee,torneo,hat,festa"
-                class="umami--click--share-hat-twitter"
-                title="Condividi su Twitter" target="_blank" rel="noopener"
-              ><i class="fab fa-twitter"></i>
-              </a>
-              <a href="https://api.whatsapp.com/send?text=https://ultimateverona.it%0ATorneo%20HAT-tention%20di%20Ultimate%20Frisbee%20il%2016%20ottobre%20a%20Parona%20in%20Via%20della%20Diga%206.%20Andiamo?"
-                class="umami--click--share-hat-whatsapp"
-                title="Condividi su Whatsapp" target="_blank" rel="noopener"
-              ><i class="fa-brands fa-whatsapp"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
     </div>
   </section>
   <!-- //events -->
