--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </script>
   <!--//schema-->
 
-  <script async defer data-website-id="3d9dabda-44aa-46ba-b95a-922601833e88" src="https://pizidavi-stats.herokuapp.com/umami.js"></script>
+  <script async defer data-website-id="0eace1b9-7cd5-432b-96ac-a4918ab2971b" src="https://pizidavi-analytics.vercel.app/umami.js"></script>
 </head>
 <body>
   <noscript>Questo sito necessita di Javascript per funzionare</noscript>
