--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
             <li>
               <div class="banner-text">
                 <span class="subtitle">CUS Verona Ultimate Frisbee</span>
-                <h1><span style="color:var(--blue);">D</span>iscover</h1>
+                <h1><span style="color:var(--blue);">D</span>ISCOVER</h1>
                 <p>Who gets more air than a basketball player, more floor than a rugby player and pulls at every tournament?<br>That’s an <b>Ultimate Player</b></p>
               </div>
             </li>
             <li>
               <div class="banner-text">
                 <span class="subtitle">CUS Verona Ultimate Frisbee</span>
-                <h1><span style="color:var(--blue);">D</span>iscover</h1>
+                <h1><span style="color:var(--blue);">D</span>ISCOVER</h1>
                 <p>"..L'Ultimate combina velocità, grazia e potenti scatti con un ritmo estenuante."<br><small>The Wall Street Journal</small></p>
               </div>
             </li>
             <li>
               <div class="banner-text">
                 <span class="subtitle">CUS Verona Ultimate Frisbee</span>
-                <h1><span style="color:var(--blue);">D</span>iscover</h1>
+                <h1><span style="color:var(--blue);">D</span>ISCOVER</h1>
                 <p>Lo sport dà il meglio di sé quando ci unisce.</p>
               </div>
             </li>
@@ -158,33 +158,29 @@
 
   <!-- Info -->
   <div class="banner-bottom">
-    <div class="bnr-btm-grids-agileits">
+    <a href="mailto:discover.cusverona@gmail.com"
+      class="bnr-btm-grids-agileits umami--click--open-email"
+    >
       <div class="bnr-btm-icon">
         <i class="fa-solid fa-envelope"></i>
       </div>
       <div class="bnr-btm-info">
         <h3>Scrivici</h3>
-        <p>
-          <a href="mailto:discover.cusverona@gmail.com"
-            class="umami--click--open-email" data-contact-email
-          >discover.cusverona@gmail.com</a>
-        </p>
+        <p data-contact-email>discover.cusverona@gmail.com</p>
       </div>
-    </div>
-    <div class="bnr-btm-grids-agileits">
+    </a>
+    <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
+      class="bnr-btm-grids-agileits umami--click--open-maps"
+      title="Google Maps" target="_blank" rel="noopener"
+    >
       <div class="bnr-btm-icon">
         <i class="fa-solid fa-location-dot"></i>
       </div>
       <div class="bnr-btm-info">
         <h3>Trovaci</h3>
-        <p>
-          <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
-            class="umami--click--open-maps"
-            title="Google Maps" target="_blank" rel="noopener" data-where
-          >Via Montorio 114, Verona</a>
-        </p>
+        <p data-where>Via Montorio 114, Verona</p>
       </div>
-    </div>
+    </a>
     <div class="bnr-btm-grids-agileits">
       <div class="bnr-btm-icon">
         <i class="fa fa-users" aria-hidden="true"></i>
@@ -313,32 +309,56 @@
         </svg>
       </h2>
       <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-6 col-lg-4 about-w3-grids" data-when>
+        <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
+          class="col-sm-12 col-md-6 col-lg-4 about-w3-grids umami--click--open-maps"
+          target="_blank"
+          rel="noopener"
+          data-when
+        >
           <div class="trust-icon-w3ls">
             <i class="fa fa-user" aria-hidden="true"></i>
           </div>
           <h4 class="mt-2" data-weekday>Lunedì</h4>
           <p class="para-agileits-w3layouts" data-time>
             Dalle <b>19.30</b> alle <b>21.30</b> <br>
-            <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Via Montorio 114, Verona</a>
+            <span data-where>Via Montorio 114, Verona</span>
           </p>
           <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 about-w3-grids" data-when>
+        </a>
+        <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
+          class="col-sm-12 col-md-6 col-lg-4 about-w3-grids umami--click--open-maps"
+          target="_blank"
+          rel="noopener"
+          data-when
+        >
           <div class="trust-icon-w3ls">
             <i class="fa fa-user" aria-hidden="true"></i>
           </div>
           <h4 class="mt-2" data-weekday>Giovedì</h4>
           <p class="para-agileits-w3layouts" data-time>
             Dalle <b>19.30</b> alle <b>21.30</b> <br>
-            <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Via Montorio 114, Verona</a>
+            <span data-where>Via Montorio 114, Verona</span>
           </p>
           <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
-        </div>
+        </a>
       </div>
     </div>
   </div>
   <!-- //join-us -->
+
+  <!-- FAQ -->
+  <section id="faq" class="events d-none">
+    <div class="container">
+      <h2 class="heading-agileinfo">
+        FAQ
+        <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+          <path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/>
+        </svg>
+      </h2>
+      <div data-faq></div>
+    </div>
+  </section>
+  <!-- //faq -->
 
   <!-- footer -->
   <div class="footer">
