--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
   </script>
   <!--//schema-->
 
-  <script async defer data-website-id="0eace1b9-7cd5-432b-96ac-a4918ab2971b" src="https://pizidavi-analytics.vercel.app/umami.js"></script>
+  <script async defer
+    src="https://pizidavi-analytics.vercel.app/umami.js"
+    data-website-id="0eace1b9-7cd5-432b-96ac-a4918ab2971b"
+    data-domains="ultimateverona.it"
+  ></script>
 </head>
 <body>
   <noscript>Questo sito necessita di Javascript per funzionare</noscript>
@@ -102,7 +106,7 @@
   <div id="home" class="banner w3l">
     <div class="video-background">
       <div class="video-hider"></div>
-      <video muted loop autoplay>
+      <video autoplay playsinline muted loop disablepictureinpicture poster="images/background_poster.webp">
         <source src="images/background.mp4" type="video/mp4" />
       </video>
       <button class="video-control" title="Play/Pause">
