--- a/index.html
+++ b/index.html
@@ -66,26 +66,42 @@
     "mainEntity": [
       {
         "@type": "Question",
-        "name": "Che cos'è l'Ultimate?",
+        "name": "Come funziona l'Ultimate?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "L'Ultimate è uno sport che seduce rapidamente per la sua semplicitá, l'immediatezza e la spettacolaritá di gioco. Per praticarlo è sufficiente un disco da 175 grammi, due squadre e un campo. L'Ultimate è uno sport di squadra completo, dai tratti agonistici e tecnici simili ad altri sport, che non prevede il contatto fisico e dai risvolti educativi eccezionali."
+          "text": "Si gioca 7 contro 7 in un campo lungo come quello da calcio (100 metri), ma un po' più stretto (37 metri), e con due aree di meta alle estremità del campo profonde 18 metri.<br>L'obbiettivo è segnare più mete della squadra avversaria. Per fare meta bisogna passare il disco a un compagno che si trova all'interno della meta avversaria.<br>Se il disco cade a terra o viene intercettato da un avversario, il possesso passa all'altra squadra."
         }
       },
       {
         "@type": "Question",
-        "name": "Quando e dove vi allenate?",
+        "name": "È uno sport di contatto?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Ci allenamiamo il <b>Lunedì</b> e <b>Giovedì</b> dalle <b>19:30</b> alle <b>21:30</b> in <a href=https://goo.gl/maps/yFJq3i7R1nDyJrof7>Via Montorio 114, Verona</a>"
+          "text": "Non è previsto contatto fisico.<br>Non si può strappare il disco dalle mani, è possibile solo intercettarlo mentre è in aria."
         }
       },
       {
         "@type": "Question",
-        "name": "Posso venire a provare anche io?",
+        "name": "Categorie di gioco?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "<b>Ovviamente!</b> Mandaci una email o scrivici su <a href=https://www.facebook.com/DiscoverUltimateVerona>Facebook</a> e <a href=https://www.instagram.com/discover.ultimate.verona>Instagram</a> per farcelo sapere"
+          "text": "Maschile (detta \"open\" in quanto possono giocare anche le ragazze)<br>Femminile<br>Mixed (ogni squadra deve schierare un numero prestabilito di uomini e donne)"
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Cos'è il Fair Play?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "L'Ultimate è uno sport autoarbitrato.<br>Non c'è l'arbitro e tutti i giocatori si impegnano nel rispetto delle regole e degli avversari."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Ci sono dei campionati?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "C'è un campionato nazionale diviso in seria A, B e C."
         }
       }
     ]
