--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </div>
       <div class="bnr-btm-info">
         <h3>Scrivici</h3>
-        <p data-contact-email>discover.cusverona@gmail.com</p>
+        <p>discover.cusverona@gmail.com</p>
       </div>
     </a>
     <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
@@ -198,7 +198,7 @@
       </div>
       <div class="bnr-btm-info">
         <h3>Trovaci</h3>
-        <p data-where>Via Montorio 114, Verona</p>
+        <p>Via Montorio 114, Verona</p>
       </div>
     </a>
     <div class="bnr-btm-grids-agileits">
@@ -211,14 +211,14 @@
           <li>
             <a href="https://www.facebook.com/DiscoverUltimateVerona"
               class="umami--click--open-facebook"
-              title="Facebook" target="_blank" rel="noopener" data-social-facebook
+              title="Facebook" target="_blank" rel="noopener"
             ><i class="fa-brands fa-facebook-f"></i>
             </a>
           </li>
           <li>
             <a href="https://www.instagram.com/discover.ultimate.verona"
               class="umami--click--open-instagram"
-              title="Instagram" target="_blank" rel="noopener" data-social-instagram
+              title="Instagram" target="_blank" rel="noopener"
             ><i class="fa-brands fa-instagram"></i>
             </a>
           </li>
@@ -307,7 +307,7 @@
   <!-- //about -->
 
   <!-- Events -->
-  <section id="events" class="events pt-0 d-none">
+  <section id="events" class="section pt-0 d-none">
     <div class="container">
       <h2 class="heading-agileinfo">
         Events
@@ -333,15 +333,14 @@
           class="col-sm-12 col-md-6 col-lg-4 about-w3-grids umami--click--open-maps"
           target="_blank"
           rel="noopener"
-          data-when
         >
           <div class="trust-icon-w3ls">
             <i class="fa fa-user" aria-hidden="true"></i>
           </div>
-          <h4 class="mt-2" data-weekday>Lunedì</h4>
-          <p class="para-agileits-w3layouts" data-time>
+          <h4 class="mt-2">Lunedì</h4>
+          <p class="para-agileits-w3layouts">
             Dalle <b>19.30</b> alle <b>21.30</b> <br>
-            <span data-where>Via Montorio 114, Verona</span>
+            <span>Via Montorio 114, Verona</span>
           </p>
           <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
         </a>
@@ -349,15 +348,14 @@
           class="col-sm-12 col-md-6 col-lg-4 about-w3-grids umami--click--open-maps"
           target="_blank"
           rel="noopener"
-          data-when
         >
           <div class="trust-icon-w3ls">
             <i class="fa fa-user" aria-hidden="true"></i>
           </div>
-          <h4 class="mt-2" data-weekday>Giovedì</h4>
-          <p class="para-agileits-w3layouts" data-time>
+          <h4 class="mt-2">Giovedì</h4>
+          <p class="para-agileits-w3layouts">
             Dalle <b>19.30</b> alle <b>21.30</b> <br>
-            <span data-where>Via Montorio 114, Verona</span>
+            <span>Via Montorio 114, Verona</span>
           </p>
           <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
         </a>
@@ -367,7 +365,7 @@
   <!-- //join-us -->
 
   <!-- FAQ -->
-  <section id="faq" class="events d-none">
+  <section id="faq" class="section">
     <div class="container">
       <h2 class="heading-agileinfo">
         FAQ
@@ -375,7 +373,48 @@
           <path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/>
         </svg>
       </h2>
-      <div data-faq></div>
+      <div>
+        <details open>
+          <summary>Come funziona l'Ultimate?</summary>
+          <div>
+            Si gioca 7 contro 7 in un campo lungo come quello da calcio (100 metri),
+            ma un po' più stretto (37 metri), e con due aree di meta alle estremità
+            del campo profonde 18 metri.<br />L'obbiettivo è segnare più mete della
+            squadra avversaria. Per fare meta bisogna passare il disco a un compagno
+            che si trova all'interno della meta avversaria.<br />Se il disco cade a
+            terra o viene intercettato da un avversario, il possesso passa all'altra
+            squadra.
+          </div>
+        </details>
+        <details>
+          <summary>È uno sport di contatto?</summary>
+          <div>
+            Non è previsto contatto fisico.<br />Non si può strappare il disco dalle
+            mani, è possibile solo intercettarlo mentre è in aria.
+          </div>
+        </details>
+        <details>
+          <summary>Categorie di gioco?</summary>
+          <div>
+            <ul class="list">
+              <li>Maschile (detta "open" in quanto possono giocare anche le ragazze)</li>
+              <li>Femminile</li>
+              <li>Mixed (ogni squadra deve schierare un numero prestabilito di uomini e donne)</li>
+            </ul>
+          </div>
+        </details>
+        <details>
+          <summary>Cos'è il Fair Play?</summary>
+          <div>
+            L'Ultimate è uno sport autoarbitrato.<br />Non c'è l'arbitro e tutti i
+            giocatori si impegnano nel rispetto delle regole e degli avversari.
+          </div>
+        </details>
+        <details>
+          <summary>Ci sono dei campionati?</summary>
+          <div>C'è un campionato nazionale diviso in seria A, B e C.</div>
+        </details>
+      </div>      
     </div>
   </section>
   <!-- //faq -->
