Added Utils Links

--- a/index.html
+++ b/index.html
@@ -422,6 +422,72 @@
   <!-- footer -->
   <div class="footer">
     <div class="container">
+      <div class="footer_grids">
+        <!-- fifd -->
+        <div class="col-md-4 footer_grid">
+          <h3 class="white-w3ls">FIFD</h3>
+          <ul class="footer_grid_list">
+            <li>
+              <i class="fa fa-tint"></i>
+              <a href="https://www.fifd.it"
+                class="umami--click--open-fifd"
+                target="_blank" rel="noopener"
+                >Sito Web</a>
+            </li>
+            <li>
+              <i class="fa fa-tint"></i>
+              <a href="https://www.fifd.it/pages/campionati-italiani-2023"
+                class="umami--click--open-fifd-campionati-2023"
+                target="_blank" rel="noopener"
+                >Campionati Italiani 2023</a>
+            </li>
+          </ul>
+        </div>
+        <!-- //fifd -->
+        <!-- wfdf -->
+        <div class="col-md-4 footer_grid">
+          <h3 class="white-w3ls">WFDF</h3>
+          <ul class="footer_grid_list">
+            <li>
+              <i class="fa fa-tint"></i>
+              <a href="https://wfdf.sport"
+                class="umami--click--open-wfdf"
+                target="_blank" rel="noopener"
+                >Sito Web</a>
+            </li>
+            <li>
+              <i class="fa fa-tint"></i>
+              <a href="https://rules.wfdf.org/accreditation"
+                class="umami--click--open-wfdf-accreditation"
+                target="_blank" rel="noopener"
+                >Accreditation</a>
+            </li>
+          </ul>
+        </div>
+        <!-- //wfdf -->
+        <!-- cus -->
+        <div class="col-md-4 footer_grid">
+          <h3 class="white-w3ls">CUS Verona</h3>
+          <ul class="footer_grid_list">
+            <li>
+              <i class="fa fa-tint"></i>
+              <a href="https://www.cusverona.it"
+                class="umami--click--open-cus"
+                target="_blank" rel="noopener"
+                >Sito Web</a>
+            </li>
+            <li>
+              <i class="fa fa-tint"></i>
+              <a href="http://servizi.cusverona.it/Tesseramento_CUS"
+                class="umami--click--open-cus-tesseramento"
+                target="_blank" rel="noopener"
+                >Tesseramento</a>
+            </li>
+          </ul>
+        </div>
+        <!-- //cus -->
+        <div class="clearfix"></div>
+      </div>
       <div class="agileinfo_copyright">
         <p>© <span id="year">2022</span> Discover Ultimate CUS Verona</p>
       </div>
@@ -430,7 +496,7 @@
       </div>
     </div>
   </div>
-  <!--//footer -->
+  <!-- //footer -->
 
   <!-- js -->
   <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
