--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
   <!-- //about -->
 
   <!-- Events -->
-  <section id="events" class="section pt-0">
+  <section id="events" class="section pt-0 d-none">
     <div class="container">
       <h2 class="heading-agileinfo">
         Events
@@ -315,67 +315,6 @@
           <path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/>
         </svg>
       </h2>
-      <div data-event-title="beginner-course-2023">
-        <div class="row justify-content-center">
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="latest-item large-item m-auto">
-              <img src="images/locandina_campionato_studentesco.png" class="img-fluid mh-100" alt="locandina beginner course 2023">
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-6">
-            <div id="event-hat" class="long-text text-justify py-3 px-1">
-              <h3>Corso di avviamento Beginner</h3>
-
-              <h5 class="mt-3">DOVE?</h5>
-              <p>Campi Gavagnin, <a href="https://goo.gl/maps/Ugg252XhXp2m7TiW9" target="_blank">Via Montorio 112</a></p>
-
-              <h5 class="mt-3">QUANDO?</h5>
-              <p>Tutti i Lunedì e Giovedì dal 29 maggio compreso per <b>10 lezioni</b></p>
-              <p>Dalle ore 19:30 alle 21:00</p>
-
-              <h5 class="mt-3">QUANTO?</h5>
-              <p>20€ + <b>Disco in regalo</b> 🥏<br /> <span class="muted">Allenamnto di prova gratuito</span></p>
-            </div>
-          </div>
-        </div>
-        <div id="countdown" class="row justify-content-center mt-4 hidden" data-countdown="2023-05-29 19:30">
-          <div class="col-sm-12 col-md-8 col-lg-6">
-            <ul class="countdown">
-              <li><span data-countdown-text="days">0</span>Giorni</li>
-              <li><span data-countdown-text="hours">0</span>Ore</li>
-              <li><span data-countdown-text="minutes">0</span>Minuti</li>
-              <li><span data-countdown-text="seconds">0</span>Secondi</li>
-            </ul>
-          </div>
-        </div>
-        <div class="row justify-content-center mt-4">
-          <div class="col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="share-btn">
-              <span class="text">Share</span>
-              <span class="icon">
-                <i class="fa-solid fa-share"></i>
-              </span>
-              <div class="sm-btns">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fultimateverona.it"
-                  class="umami--click--share-beginner-course-facebook"
-                  title="Condividi su Facebook" target="_blank" rel="noopener"
-                ><i class="fab fa-facebook"></i>
-                </a>
-                <a href="https://twitter.com/intent/tweet?text=Andiamo%20a%20provare%20Ultimate%20Frisbee%20il%2029%20maggio%20al%20Gavagnin%3F&url=https%3A%2F%2Fultimateverona.it&hashtags=ultimate,verona,frisbee,beginner"
-                  class="umami--click--share-beginner-course-twitter"
-                  title="Condividi su Twitter" target="_blank" rel="noopener"
-                ><i class="fab fa-twitter"></i>
-                </a>
-                <a href="https://api.whatsapp.com/send?text=https://ultimateverona.it%0AAndiamo%20a%20provare%20Ultimate%20Frisbee%20il%2029%20maggio%20al%20Gavagnin%3F"
-                  class="umami--click--share-beginner-course-whatsapp"
-                  title="Condividi su Whatsapp" target="_blank" rel="noopener"
-                ><i class="fa-brands fa-whatsapp"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
   <!-- //events -->
