Changed CUS url

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             </li>
             <li>
               <i class="fa fa-tint"></i>
-              <a href="http://servizi.cusverona.it/Tesseramento_CUS"
+              <a href="https://servizi.cusverona.it/Tesseramento_CUS"
                 class="umami--click--open-cus-tesseramento"
                 target="_blank" rel="noopener"
                 >Tesseramento</a>
