New description and images

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </ul>
         <div class="resp-tabs-container">
           <div class="row tab1">
-            <div class="col-sm-12 col-md-6 services-img-w3-agile" style="background-image: url(images/what_is_ultimate.webp);"></div>
+            <div class="col-sm-12 col-md-6 services-img-w3-agile" style="background-image: url(images/good_catch.webp); background-position: top;"></div>
             <div class="col-sm-12 col-md-6 services-right-agileits">
               <h4>Che cos'è l' Ultimate</h4>
               <p class="para-agileits-w3layouts">
@@ -282,22 +282,21 @@
             </div>
           </div>
 
-          <div class="row tab3">
-            <div class="col-sm-12 col-md-6 services-img-w3-agile" style="background-image: url(images/our_team.webp);"></div>
-            <div class="col-sm-12 col-md-6 services-right-agileits bar-grids bargrids-left">
-              <h4>Le nostre abilità</h4>
-              <h6>Simpatia <span>90%</span></h6>
-              <div class="progress">
-                <div class="progress-bar progress-bar-striped" style="width: 90%"></div>
+          <div class="tab3">
+            <div class="row mb-4">
+              <div class="col-sm-12 col-md-6 services-img-w3-agile" style="background-image: url(images/team_open.webp); background-size: contain;"></div>
+              <div class="col-sm-12 col-md-6 services-right-agileits bar-grids bargrids-left">
+                <h4>Squadra Maschile</h4>
+                <p class="para-agileits-w3layouts">Un gruppo affiatato di atleti appassionati, sempre pronti a dare il massimo in campo. Con abilità e strategia, affronta ogni partita con determinazione e spirito di squadra. La competizione è intensa, ma il rispetto e l'amicizia tra i membri sono ciò che li unisce. Sono qui per migliorare, divertirsi e vivere la bellezza di questo sport!</p>
               </div>
-              <h6>Passione <span>100%</span></h6>
-              <div class="progress">
-                <div class="progress-bar progress-bar-striped" style="width: 100%"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-12 col-md-6 services-right-agileits bar-grids bargrids-left">
+                <h4>Squadra Femminile</h4>
+                <p class="para-agileits-w3layouts">La nuova squadra femminile! È composta da un gruppo di ragazze determinate e appassionate, pronte a farsi strada nel mondo di questo sport. Anche se appena nate, la loro voglia di imparare e migliorare è già alle stelle. Ogni allenamento rappresenta un'opportunità per crescere insieme, costruendo legami forti e uniti dalla passione per il frisbee. Sono pronte a sfidare se stesse e a lasciare il segno!</p>
               </div>
-              <h6>Stamina <span>80%</span></h6>
-              <div class="progress  w3-agile prgs-w3agile-last">
-                <div class="progress-bar progress-bar-striped" style="width: 80%"></div>
-              </div>
+              <div class="col-sm-12 col-md-6 services-img-w3-agile" style="background-image: url(images/team_women.webp);"></div>
             </div>
           </div>
         </div>
@@ -430,7 +429,7 @@
             Dalle <b>19.30</b> alle <b>21.30</b> <br>
             <span>Via Montorio 114, Verona</span>
           </p>
-          <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
+          <small class="d-block mt-3">4 allenamenti di prova</small>
         </a>
         <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
           class="col-sm-12 col-md-6 col-lg-4 about-w3-grids umami--click--open-maps"
@@ -445,7 +444,7 @@
             Dalle <b>19.30</b> alle <b>21.30</b> <br>
             <span>Via Montorio 114, Verona</span>
           </p>
-          <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
+          <small class="d-block mt-3">4 allenamenti di prova</small>
         </a>
       </div>
     </div>
