Updated flying disc website link

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 e un campo. L'Ultimate è uno sport di squadra completo, dai tratti agonistici e tecnici 
                 simili ad altri sport, che non prevede il contatto fisico e dai risvolti educativi eccezionali.
               </p>
-              <a href="https://www.fifd.it/pages/ultimate-cos-e"
+              <a href="https://flyingdisc.it/ultimate/"
                 class="read-agileits umami--click--read-more-tab0" target="_blank" rel="noopener"
                 >Read More</a>
             </div>
@@ -269,7 +269,7 @@
                 Se l'attacco perde il possesso del disco, cambiano i ruoli di attacco e difesa.
                 Chi è in possesso del disco non può correre.
               </p>
-              <a href="https://www.fifd.it/pages/ultimate-come-si-gioca"
+              <a href="https://flyingdisc.it/ultimate/come-si-gioca/"
                 class="read-agileits umami--click--read-more-tab1" target="_blank" rel="noopener"
                 >Read More</a>
             </div>
@@ -510,27 +510,27 @@
   <div class="footer">
     <div class="container">
       <div class="footer_grids">
-        <!-- fifd -->
+        <!-- flying disch -->
         <div class="col-md-4 footer_grid">
-          <h3 class="white-w3ls">FIFD</h3>
+          <h3 class="white-w3ls">Flying Disc</h3>
           <ul class="footer_grid_list">
             <li>
               <i class="fa fa-tint"></i>
-              <a href="https://www.fifd.it"
-                class="umami--click--open-fifd"
+              <a href="https://flyingdisc.it"
+                class="umami--click--open-flyingdisc"
                 target="_blank" rel="noopener"
                 >Sito Web</a>
             </li>
             <li>
               <i class="fa fa-tint"></i>
-              <a href="https://www.fifd.it/pages/campionati-italiani-2024"
-                class="umami--click--open-fifd-campionati-2024"
+              <a href="https://flyingdisc.it/campionati-2025/"
+                class="umami--click--open-flyingdisc-campionati-2025"
                 target="_blank" rel="noopener"
-                >Campionati Italiani 2024</a>
+                >Campionati Italiani 2025</a>
             </li>
           </ul>
         </div>
-        <!-- //fifd -->
+        <!-- //flying disc -->
         <!-- wfdf -->
         <div class="col-md-4 footer_grid">
           <h3 class="white-w3ls">WFDF</h3>
