Added new junior event

--- a/index.html
+++ b/index.html
@@ -315,6 +315,50 @@
         </svg>
       </h2>
 
+      <div data-event-title="junior-course-2026">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-8 col-lg-6">
+            <div class="latest-item large-item m-auto">
+              <img src="images/volantino-junior-2026.webp" class="img-fluid mh-100" alt="volantino junior 2026">
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-6">
+            <div class="m-auto">
+              <h2>Corso U15 da settembre!</h2>
+              <p>
+                <br /><br />
+                <span style="font-weight: bold; display: block;">Allenamenti:</span>
+                Martedi' e Giovedi' dalle 17:30 alle 19:00* <br/>
+                presso il campo sportivo Gavagnin, <a href="https://goo.gl/maps/Ugg252XhXp2m7TiW9" target="_blank" rel="noopener">Via Montorio 114</a>, Verona.<br/>
+                <br />
+                *Gli orari saranno confermati da Settembre 2025.<br/>
+                <br />
+                <span style="font-weight: bold; display: block;">Responsabile:</span>
+                Matteo Prandi - 3315821893 - discover.cusverona@gmail.com
+              </p>
+              <p class="mt-5 text-center">
+                <a href="https://forms.gle/5er6bYdn8QQ6g4LLA" class="read-agileits umami--click--junior-2026" target="_blank" rel="noopener">
+                  Effettua la pre-iscrizione!
+                </a>
+                <span class="mt-4" style="font-size: 80%;display: block;">
+                  Il seguente modulo vuole raccogliere le pre adesioni per l'Under 15 Discover Cus Verona a.s. 2025/26, adesioni non vincolanti ma necessarie all'organizzazione della stagione sportiva.
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center mt-4 hidden" data-countdown="2025-09-01 19:30" data-countdown-until="2025-10-30 21:30">
+          <div class="col-sm-12 col-md-8 col-lg-6">
+            <ul class="countdown">
+              <li><span data-countdown-text="days">0</span>Giorni</li>
+              <li><span data-countdown-text="hours">0</span>Ore</li>
+              <li><span data-countdown-text="minutes">0</span>Minuti</li>
+              <li><span data-countdown-text="seconds">0</span>Secondi</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <div data-event-title="beginner-course-2025">
         <div class="row justify-content-center">
           <div class="col-12 col-md-8 col-lg-6">
